update socket js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- Android -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#333333">
-  <script src="http://dpt.emath.tw:443/socket.io/socket.io.js" type="text/javascript"></script>
+  <script src="static/js/socket.io.js" type="text/javascript"></script>
   <style>
     .flexblock li h2 {
       font-size: 25px;
