--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
       <section class="aligncenter">
         <div class="wrap">
           <fieldset>
-            <p><input id="url" value="https://andylee830914.github.io/ppdanmu/demo.pptx"></p>
+            <!--https://andylee830914.github.io/ppdanmu/demo.pptx-->
+            <p><input id="url"></p>
             <p><input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()></p>
           </fieldset>
         </div>
