--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
         <div class="wrap">
           <fieldset>
             <!--https://andylee830914.github.io/ppdanmu/demo.pptx-->
-            <p><input id="url"></p>
-            <p><input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()></p>
+            <input id="url">
+            <br>
+            <br>
+            <input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()>
           </fieldset>
         </div>
         <!-- .end .wrap -->
