change default height

--- a/index.html
+++ b/index.html
@@ -118,10 +118,8 @@
         <div class="wrap">
           <fieldset>
             <!--https://andylee830914.github.io/ppdanmu/demo.pptx-->
-            <input id="url">
-            <br>
-            <br>
-            <input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()>
+            <p><input id="url"></p>
+            <p><input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()></p>
           </fieldset>
         </div>
         <!-- .end .wrap -->
@@ -171,7 +169,7 @@
     $(document).ready(function () {
       $("#danmu").danmu({
         width: "100%",
-        height: 300,
+        height: "20%",
         zindex: 10,
         fontSizeSmall: 30,
         FontSizeBig: 40,
