--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
         -->
       <section class="aligncenter">
         <div class="wrap">
+          <h3>PPDanmu</h3>          
           <fieldset>
             <!--https://andylee830914.github.io/ppdanmu/demo.pptx-->
-            <p><input id="url"></p>
+            <p><input id="url" placeholder="請輸入簡報網址"></p>
             <p><input class="button" type="button" id="mybutton" value="設定簡報" onclick=ppturl()></p>
           </fieldset>
         </div>
