--- a/remote.html
+++ b/remote.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-    <script src="https://dpt.emath.tw:8800/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="https://ppdanmu.herokuapp.com/socket.io/socket.io.js" type="text/javascript"></script>
     <style type="text/css">
         .footer {
             position: absolute;
@@ -50,9 +50,7 @@
 </body>
 
 <script type="text/javascript">
-    var nodejs_server = "dpt.emath.tw:8800";       
-        // 進行 connect
-    var socket = io.connect("https://" + nodejs_server);
+    var socket = io.connect("https://ppdanmu.herokuapp.com");
     function getParameterByName(name, url) {
             if (!url) url = window.location.href;
             name = name.replace(/[\[\]]/g, "\\$&");
