--- a/client/index.html
+++ b/client/index.html
@@ -4,27 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
-  <script src="https://ppdanmu.herokuapp.com/socket.io/socket.io.js" type="text/javascript"></script>
+  <script src="https://ppdanmu.andylee.tw/socket.io/socket.io.js" type="text/javascript"></script>
   <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
   <script src="static/js/jquery.min.js"></script>
   <!-- jquery.danmu.js (//github.com/chiruom/danmu/) - Licensed under the MIT license-->
   <script src="static/js/jquery.danmu.min.js"></script>
   <script>if (window.module) module = window.module;
-  var ipcRenderer = require('electron').ipcRenderer;
-  var currentWindow = require('electron').remote.getCurrentWindow();
+    var ipcRenderer = require('electron').ipcRenderer;
   </script>
   </body>
 </head>
 
 <body>
-    <div id="danmu"></div>
+  <div id="danmu"></div>
 
-<script>
-  var nodejs_server = "https://ppdanmu.herokuapp.com";
+  <script>
+    var nodejs_server = "https://ppdanmu.andylee.tw";
     var socket = io.connect(nodejs_server);
     $(window).load(function () {
-      url = currentWindow.custom.mid
-      socket.emit('room', { msg: url });
+      const params = new URLSearchParams(global.location.search);
+      socket.emit('room', { msg: params.get("mid") });
     });
     $(document).ready(function () {
       $("#danmu").danmu({
@@ -39,10 +38,10 @@
         location.reload();
       });
       socket.on("room_create", function (data) {
-        ipcRenderer.send('token',data.id);
+        ipcRenderer.send('token', data.id);
         console.log(data.id);
-        socket.emit('say', { msg: "歡迎使用彈幕系統" , from: 'test', fname: 'test'});
-        qrurl = "https://ppdanmu.herokuapp.com?id=" + data.id;
+        socket.emit('say', { msg: "歡迎使用彈幕系統", from: 'test', fname: 'test' });
+        qrurl = "https://ppdanmu.andylee.tw?id=" + data.id;
         // $("#qrcode").attr('src', 'https://chart.googleapis.com/chart?cht=qr&chs=500x500&chl=' + qrurl);
 
       });
@@ -59,7 +58,7 @@
         $('#danmu').danmu("addDanmu", aDanmu);
       });
     });
-</script>
+  </script>
 
 
 </html>
