--- a/server/remote.html
+++ b/server/remote.html
@@ -1,59 +1,91 @@
 <!document html>
-<html>
+    <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>彈幕發送器</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-    <script src="https://ppdanmu.andylee.tw/socket.io/socket.io.js" type="text/javascript"></script>
-    <style type="text/css">
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            vertical-align: middle;
-            line-height: 60px;
-            /* Set the fixed height of the footer here */
-            height: 60px;
-            /*background-color: #f5f5f5;*/
-        }
-        .body {
-            margin-bottom: 60px;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
+        <title>彈幕發送器</title>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.messagestore.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.fallbacks.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.parser.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.emitter.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@wikimedia/jquery.i18n@1.0.7/src/jquery.i18n.language.js"></script>
+        <script src="https://ppdanmu.andylee.tw/socket.io/socket.io.js" type="text/javascript"></script>
+        <style type="text/css">
+            .footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                vertical-align: middle;
+                line-height: 60px;
+                /* Set the fixed height of the footer here */
+                height: 60px;
+                /*background-color: #f5f5f5;*/
+            }
 
-<body>
+            .body {
+                margin-bottom: 60px;
+            }
+        </style>
+    </head>
 
-<div class="container">
-    <h2>一直玩一直玩</h2>
-    <p>使用說明：用彈幕蓋滿投影片就對了！</p>
-    <input id="nameinput" class="form-control">
-    <div style="margin: 0px auto;padding-top:10px;" onkeypress="sent(event,0)" class="input-group col-xs-12 col-md-8">
-        <input id="chatinput" class="form-control">
-            <span class="input-group-btn">
-                <button class="btn btn-default" type="button" onclick="sent(event,1)">送！</button>
-            </span>
-    </div>
+    <body>
 
-</div>
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted">© 2020 NCKU MATH</p>
-    </div>
-</footer>
-</body>
+        <main>
+            <div class="container">
+                <h2 class="mt-5" data-i18n="title"></h2>
+                <p data-i18n="intro"></p>
+                <form class="form-floating">
+                    <input id="nameinput" class="form-control" placeholder="Name">
+                    <label for="nameinput" data-i18n="form_name"></label>
+                </form>
+                <div onkeypress="sent(event,0)"
+                    class="input-group">    
+                    <form class="form-floating">
+                        <input id="chatinput" class="form-control">
+                        <label for="chatinput" data-i18n="form_chat"></label>
+                    </form>
+                </div>
+                <div class="input-group">
+                    <select class="btn btn-outline-secondary form-select col-sm-10" id="targetlan">
+                        <option value="ori" selected data-i18n="lan_ori"></option>
+                        <option value="zh-TW" data-i18n="lan_zh"></option>
+                        <option value="en" data-i18n="lan_en"></option>
+                        <option value="ja" data-i18n="lan_ja"></option>
+                        <option value="vi" data-i18n="lan_vi"></option>
+                    </select>
+                    <button class="btn btn-outline-secondary" type="button" onclick="sent(event,1)" data-i18n="send"></button>
+                </div>
 
-<script type="text/javascript">
-    var socket = io.connect("https://ppdanmu.andylee.tw");
-    var sanguo = ["諸葛亮","趙雲","關羽","司馬懿","周瑜","郭嘉","呂布","馬超","曹操","張飛"];
-    function getParameterByName(name, url) {
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">© 2023 NCKU MATH</p>
+            </div>
+        </footer>
+        <form class="position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+            <div class="g-3">
+                <select class="form-select " aria-label="" id="language">
+                    <option value="zh-TW" selected>中文</option>
+                    <option value="en">English</option>
+                </select>
+            </div>
+    </body>
+
+    <script type="text/javascript">
+        var socket = io.connect("https://ppdanmu.andylee.tw");
+        var sanguo = ["諸葛亮", "趙雲", "關羽", "司馬懿", "周瑜", "郭嘉", "呂布", "馬超", "曹操", "張飛"];
+        function getParameterByName(name, url) {
             if (!url) url = window.location.href;
             name = name.replace(/[\[\]]/g, "\\$&");
             var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
@@ -61,37 +93,51 @@
             if (!results) return null;
             if (!results[2]) return '';
             return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
-    function sent(e,btn){
-        key = window.event ? e.keyCode : e.which;
-        if(key == 13 || btn == 1){
-            if($("#chatinput").val()=="") return;
-            var content=$("#chatinput").val();
-            content=content.replace(/</g, "&lt;").replace(/>/g, "&gt;");
-            if ($("#nameinput").val()){
-                content = $("#nameinput").val() + "：" + content;
+        }
+        function sent(e, btn) {
+            key = window.event ? e.keyCode : e.which;
+            if (key == 13 || btn == 1) {
+                if ($("#chatinput").val() == "") return;
+                var content = $("#chatinput").val();
+                content = content.replace(/</g, "&lt;").replace(/>/g, "&gt;");
+                socket.emit('say', { name: $("#nameinput").val(), msg: content , lan: $("#targetlan").val() });
+                $("#chatinput").val("");
             }
-            socket.emit('say', {msg: content});
-            $("#chatinput").val("");
         }
-    }
 
-    $(document).ready(function () {
-        var userName = getParameterByName("user");
-        if (userName) {
-            $("#nameinput").val(userName);
-        } else {
-            var random = Math.floor(Math.random() * sanguo.length);
-            $("#nameinput").val(sanguo[random]);
-        }
-        roomid=getParameterByName("id");
-        socket.emit('join', roomid);
-    });
-    socket.on('reconnect', (attemptNumber) => {
-        roomid = getParameterByName("id");
-        socket.emit('join', roomid);
-    });
+        $(document).ready(function () {
+            var userName = getParameterByName("user");
+            if (userName) {
+                $("#nameinput").val(userName);
+            } else {
+                var random = Math.floor(Math.random() * sanguo.length);
+                $("#nameinput").val(sanguo[random]);
+            }
+            $('#language').on('change', function (e) {
+                console.log($(this).val());
+                if ($(this).val() == "zh-TW") {
+                    $.i18n().locale = 'zh';
+                    $('body').i18n();
+                } else {
+                    $.i18n().locale = 'en';
+                    $('body').i18n();
+                }
+            }); 
+            roomid = getParameterByName("id");
+            socket.emit('join', roomid);
+        });
+        $.i18n({ locale: 'zh' }).load({
+                en: 'i18n/messages-en.json',
+                zh: 'i18n/messages-zh.json'
+            }).done(function () {
+                $('body').i18n();
+            });
+        
+        socket.on('reconnect', (attemptNumber) => {
+            roomid = getParameterByName("id");
+            socket.emit('join', roomid);
+        });
 
-</script>
+    </script>
 
-</html>
+    </html>
